Fix styling, update wrapping logic

--- a/src/Pengputer/style.css
+++ b/src/Pengputer/style.css
@@ -84,10 +84,10 @@ header a {
   content: " ";
   display: block;
   position: absolute;
-  top: 10px;
-  left: 10px;
-  bottom: 10px;
-  right: 10px;
+  top: 16px;
+  left: 16px;
+  bottom: 20px;
+  right: 16px;
   background: linear-gradient(rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 50%);
   z-index: 2;
   background-size: 100% 2px;
